Typo plugin 1.5.1 for Dotclear 2
===========================================
* Global settings added on setup

Typo plugin 1.5 for Dotclear 2
===========================================
* PHP 5.3 Compliance
* DC 2.2 new setting namespace

Typo plugin 1.4 for Dotclear 2
===========================================
* Admin action on entries - draft
* Hyphenation feature removed from this plugin

Typo plugin 1.3 for Dotclear 2
===========================================
* Automatic hyphenation for fr, de, en, es, nl and sv entries and comments (depending on blog language)
* Typo and hyphenation action on selected entries (not yet fully implemented)
* Separate typo replacement and hyphenation settings

Typo plugin 1.2.1 for Dotclear 2 - never published
===========================================
* Admin : cosmetic for notes

Typo plugin 1.2 for Dotclear 2 - 2008-10-29
===========================================
* Automatic typo replacements on comment preview

Typo plugin 1.1 for Dotclear 2 - 2008-07-30
===========================================
* Automatic typo replacements for comments of entries
* Settings : enable or disable extension by blog, include or not typo replacement for comments
* Locales : French

Typo plugin 1.0 for Dotclear 2 - 2008-07-30
===========================================
* Automatic typo replacements for excerpt and main content of entries