@@ -1,3 +1,7 @@
+Typo plugin 1.6 for Dotclear 2
+===========================================
+* Automatic typo replacements on entries' titles
+
 Typo plugin 1.5.1 for Dotclear 2
 ===========================================
 * Global settings added on setup
